--- a/moksaya/templates/profile.html
+++ b/moksaya/templates/profile.html
@@ -37,18 +37,82 @@
 </ul>
 <div class="tab-content">
   <div class="tab-pane active" id="tab1">
-    <h1>{{ project.owner }}</h1>
-    <h2>{{ project.shared_date }}</h2>
-    <h3>{{ project.title }}</h3>
-    <h4>{{ project.desc }}</h4>
-    <div class="thumbnail">
-    <img src="{{ project.screenshot.url }}" height="320" width="240" />
-    </div>
-    <a href="{{ project.src.url }}" >source code </a>
 
+<div class="carousel slide" id="myCarousel">
+<div class="carousel-inner">
+  <div class="item active">
+        <ul class="thumbnails">
+	  {% for pro in project %}
+            <li class="span3">
+                <div class="thumbnail">
+    <img src="{{ pro.screenshot.url }}" height="320" width="240" />
+       <small>{{ pro.shared_date }}</small>
+    <small>{{ pro.title }}</small>
+    <small>{{ pro.desc }}</small>
+    <a href="{{ pro.src.url }}" >source code </a>
+   
+                </div>
+            </li>
+{% endfor %}
 
+        </ul>
+  </div>
+  <div class="item">
+        <ul class="thumbnails">
+            <li class="span3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/260x180" alt="">
+                </div>
+            </li>
+            <li class="span3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/260x180" alt="">
+                </div>
+            </li>
+            <li class="span3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/260x180" alt="">
+                </div>
+            </li>
+            <li class="span3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/260x180" alt="">
+                </div>
+            </li>
+        </ul>
+  </div>
+  <div class="item">
+        <ul class="thumbnails">
+            <li class="span3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/260x180" alt="">
+                </div>
+            </li>
+            <li class="span3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/260x180" alt="">
+                </div>
+            </li>
+            <li class="span3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/260x180" alt="">
+                </div>
+            </li>
+            <li class="span3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/260x180" alt="">
+                </div>
+            </li>
+        </ul>
+  </div>
 </div>
-  <div class="tab-pane" id="tab2">
+<a data-slide="prev" href="#myCarousel" class="left carousel-control">‹</a>
+<a data-slide="next" href="#myCarousel" class="right carousel-control">›</a>
+</div>
+
+
+
+<div class="tab-pane" id="tab2">
     <p> Howdy stranger </p>
 </div>
 </div>
@@ -56,7 +120,6 @@
 
 
 
-</div>
 
 {% else %}
                  <h1><a href="{% url "account_login" %}">{% trans "Log in" %}</a></h1>
