--- a/moksaya/templates/base.html
+++ b/moksaya/templates/base.html
@@ -1,100 +1,87 @@
-{% load staticfiles %}
-{% load i18n %}
+{% load i18n static %}
 {% load url from future %}
-<!DOCTYPE html>
-<html lang="{{ LANGUAGE_CODE }}">
-    <head>
-        <meta charset="utf-8" />
-        <title>{% block head_title_base %}{% if SITE_NAME %}{{ SITE_NAME }} | {% endif %}{% block head_title %}{% endblock %}{% endblock %}</title>
-        {% block viewport %}
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+  <head>
+    <title>{% block title %}Django Userena - Accounts for your Django application{% endblock %}</title>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Accounts for your Django application" />
+    <meta name="keywords" content="accounts, django, bread and pepper, open source" />
+    <meta name="author" content="Bread and Pepper" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/master.css" %}" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+  </head>
+  <body>
+    <div id="top">
+      {% if messages %}
+      <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+
+      <div id="lang_form">
+        <form action="/i18n/setlang/" method="post" id="locale_switcher">
+          {% csrf_token %}
+          <input name="next" type="hidden" value="{{ request.path }}" />
+          <label>{% trans 'Choose language' %}:</label>
+          <select name="language" onchange="$('#locale_switcher').submit()">
+            {% for lang in LANGUAGES %}
+            <option value="{{ lang.0 }}" {% if request.LANGUAGE_CODE == lang.0 %}selected{% endif %}>{{ lang.1 }}</option>
+            {% endfor %}
+          </select>
+          <noscript>
+            <input type="submit" value="{% trans "Change language" %}" />
+          </noscript>
+        </form>
+      </div>
+    </div>
+    <div id="container">
+      <div id="header">
+
+        <h1><a href="{% url 'promo' %}">django-userena</a></h1>
+
+        {% block nav %}
+        <ul id="nav">
+          <li><a href="{% url 'promo' %}"><span>{% trans 'Home' %}</span></a></li>
+          {% if user.is_authenticated %}
+          <li><a href="{% url 'userena_profile_list' %}"><span>{% trans 'All profiles' %}</span></a></li>
+          <li><a href="{% url 'userena_umessages_list' %}"><span>{% trans 'Messages' %}</span></a></li>
+          <li><a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'Account' %} ({{ user.username }})</span></a></li>
+          <li><a href="{% url 'userena_signout' %}"><span>{% trans 'Signout' %}</span></a></li>
+          {% else %}
+          <li><a href="{% url 'userena_signin' %}"><span>{% trans 'Signin' %}</span></a></li>
+          <li><a href="{% url 'userena_signup' %}"><span>{% trans 'Signup' %}</span></a></li>
+          {% endif %}
+        </ul>
         {% endblock %}
+        {% if not user.is_authenticated %}
+        <div id="try"></div>
+        {% endif %}
 
-        {% block style_base %}
-            <link href="{% static "pinax/css/theme.css" %}" rel="stylesheet">
-            <link href="{% static "bootstrap/css/bootstrap.css" %}" rel="stylesheet">
-            <link href="{% static "bootstrap/css/bootstrap-responsive.css" %}" rel="stylesheet">
-	    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
-            {% block extra_style %}{% endblock %}
-        {% endblock %}
-
-        {% block html5shim %}
-            <!-- HTML5 shim, for IE6-8 support of HTML elements -->
-            <!--[if lt IE 9]>
-                <script src="{% static "pinax/js/html5shiv.js" %}"></script>
-            <![endif]-->
-        {% endblock %}
-
-        {% block extra_head_base %}
-            {% block extra_head %}{% endblock %}
-        {% endblock %}
-    </head>
-    <body class="{% block body_class %}{% endblock %}" id="{% block body_id %}{% endblock %}">
-        <div class="{% block wrapper_class %}{% endblock %}">
-
-            {% block topbar_base %}
-                <div class="navbar {% block navbar_class %}navbar-fixed-top navbar-inverse{% endblock %}">
-                    <div class="navbar-inner">
-                        <div class="container">
-                            {% block topbar %}
-                                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </a>
-                                {% block site_brand %}<a class="brand" href="{% url "home" %}" style="color:orange;">{{ SITE_NAME }}</a>{% endblock %}
-				
-                                <div class="nav-collapse">
-                                    {% block nav %}
-                                    <ul class="nav">
-				                <li class="divider-vertical"></li>    
-                                                <li><a href="#tab_one">Create </a></li>
-						<li class="divider-vertical"></li>
-                                                <li><a href="#tab_two">Explore</a></li>
-						<li class="divider-vertical"></li>
-					<form class="navbar-search pull-left">
-					  <i class="icon-search icon-large"></i> 
-	
-    <input type="text" class="search-query" placeholder="Search">
-    </form><li class="divider-vertical"></li>
-					
-                                            </ul>
-
-                                    {% endblock %}
-                                    {% block account_bar %}{% include "_account_bar.html" %}{% endblock %}
-                                </div>
-                            {% endblock %}
-                        </div>
-                    </div>
-                </div>
-            {% endblock %}
-
-            {% block body_base %}
-                <div class="container">
-                    {% include "_messages.html" %}
-                    {% block body %}
-                    {% endblock %}
-                    {% block footer_base %}
-                        <hr />
-                        <footer>
-                            {% block footer %}{% endblock %}
-                        </footer>
-                    {% endblock %}
-                </div>
-            {% endblock %}
-        </div>
-
-        {% block script_base %}
-            <script src="{% block jquery_src %}{% static "pinax/js/jquery.js" %}{% endblock %}"></script>
-            <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
-            <script src="{% static "pinax/js/theme.js" %}"></script>
-            {% block extra_script %}{% endblock %}
-        {% endblock %}
-
-        {% block extra_body_base %}
-            {% block extra_body %}{% endblock %}
-        {% endblock %}
-    </body>
-</html>
+      </div><!-- /header-->
+      <a href="https://github.com/bread-and-pepper/django-userena/" id="fork">{% trans 'Fork me hard' %}</a>
+      {% block content_title %}{% endblock %}
+      <div id="content-container">
+        {% block content %}{% endblock %}
+      </div><!-- /content-container-->
+      <div id="footer"><p>{% trans 'Made by' %} <a href="http://breadandpepper.com">Bread &amp; Pepper</a> | Hosting sponsored by <a href="https://www.dotcloud.com/">Dotcloud</a></p></div>
+    </div><!-- /container-->
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-8888610-14']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+       })();
+     </script>
+   </body>
+ </html>
